--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,162 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+}
+.container_contact {
+  display: grid;
+  padding-bottom: 100px;
+  grid-template-columns: 1fr 1fr;
+  background: conic-gradient(
+    #ddddff 0deg 90deg,
+    white 90deg 270deg,
+    #ddddff 270deg 360deg
+  );
+}
+.heading_container {
+  margin-top: 22%;
+  margin-left: 20%;
+}
+.main_heading {
+  color: #2B3467;
+  font-size: 2.25rem;
+  line-height: 4rem;
+  font-weight: 900;
+  margin-bottom: 50px;
+}
+.sub_heading {
+  color: gray;
+  line-height: 1.5rem;
+
+}
+.lets_talk {
+  border-radius: 15px;
+  background-color: #EB455F;
+  border: 2px solid #EB455F;
+  color: white;
+  line-height: 1em;
+  width: 80px;
+  text-align: center;
+  padding: 10px 0px 10px 0px;
+}
+.contact_form {
+  width: auto;
+  height: auto;
+  background-color: white;
+  box-shadow: 0px 0px 8px 1px lightgray;
+  border-radius: 15px;
+  margin-right: 20%;
+  margin-left: 20%;
+  margin-top: 10%;
+  padding-left: 20px;
+  padding-top: 40px;
+  padding-bottom: 50px;
+  margin-bottom: 10%;
+}
+.contact_heading {
+  padding-bottom: 25px;
+  color: #EB455F;
+  font-size: 2.25rem;
+  line-height: 3rem;
+  font-weight: 900;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input_box {
+  margin: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.errors {
+  color: red;
+  font-size: smaller;
+  margin: 0;
+  padding: 0;
+}
+.label {
+  display: block;
+  margin-bottom: 7px;
+  font-weight: 450;
+  text-shadow: #fff;
+}
+.input {
+  width: 300px;
+  height: 40px;
+  background-color: #fff;
+  border: 1px solid gray;
+  border-radius: 5px;
+  box-shadow: 0px 0px 2px 1px whitesmoke;
+  padding-left: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.input-select{
+  width: 320px;
+  height: 40px;
+  background-color: #fff;
+  border: 1px solid gray;
+  border-radius: 5px;
+  box-shadow: 0px 0px 2px 1px whitesmoke;
+  padding-left: 10px;
+}
+.input::-webkit-outer-spin-button,
+.input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.input[type="number"] {
+  -moz-appearance: textfield;
+}
+.textarea {
+  width: 300px;
+  height: 80px;
+  border: 1px solid gray;
+  border-radius: 5px;
+  box-shadow: 0px 0px 2px 1px whitesmoke;
+  resize: none;
+  padding: 20px;
+}
+
+.submit_container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.submit_button {
+  padding: 10px 80px 10px 80px;
+  text-align: center;
+  background-color: #2B3467;
+  border: 3px solid #051367;
+  border-radius: 10px;
+  color: #fff;
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 480px) {
+  .container_contact {
+    display: grid;
+    grid-template-columns: 1fr;
+    background-color: darkblue;
   }
-  to {
-    transform: rotate(360deg);
+  .heading_container {
+    margin: 15px;
+    margin-top: 40px;
+  }
+  .contact_form {
+    margin: 20px;
+  }
+  .input_box {
+    margin-left: 10%;
+  }
+  .submit_container {
+    display: grid;
+    place-items: center;
+  }
+  .submit_button {
+    width: 130%;
+    margin-left: 0;
+    margin-right: 30px;
   }
 }
