--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
@@ -17,7 +17,7 @@
   margin-left: 20%;
 }
 .main_heading {
-  color: #2B3467;
+  color: #2b3467;
   font-size: 2.25rem;
   line-height: 4rem;
   font-weight: 900;
@@ -26,12 +26,11 @@
 .sub_heading {
   color: gray;
   line-height: 1.5rem;
-
 }
 .lets_talk {
   border-radius: 15px;
-  background-color: #EB455F;
-  border: 2px solid #EB455F;
+  background-color: #eb455f;
+  border: 2px solid #eb455f;
   color: white;
   line-height: 1em;
   width: 80px;
@@ -54,7 +53,7 @@
 }
 .contact_heading {
   padding-bottom: 25px;
-  color: #EB455F;
+  color: #eb455f;
   font-size: 2.25rem;
   line-height: 3rem;
   font-weight: 900;
@@ -86,7 +85,7 @@
   padding-left: 10px;
 }
 
-.input-select{
+.input-select {
   width: 320px;
   height: 40px;
   background-color: #fff;
@@ -127,7 +126,7 @@
 .submit_button {
   padding: 10px 80px 10px 80px;
   text-align: center;
-  background-color: #2B3467;
+  background-color: #2b3467;
   border: 3px solid #051367;
   border-radius: 10px;
   color: #fff;
@@ -139,24 +138,28 @@
     display: grid;
     grid-template-columns: 1fr;
     background-color: darkblue;
+    padding: 0;
+    cursor: pointer;
   }
   .heading_container {
     margin: 15px;
     margin-top: 40px;
   }
   .contact_form {
-    margin: 20px;
+    margin: 0;
   }
   .input_box {
     margin-left: 10%;
+  }
+  .textarea {
+    width: 85%;
   }
   .submit_container {
     display: grid;
     place-items: center;
   }
   .submit_button {
-    width: 130%;
-    margin-left: 0;
-    margin-right: 30px;
+    width: 150%;
+    margin-left: 20px;
   }
 }
